<resources>
    <string name="app_name">CCMS Archive</string>

    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="fn_label">First Name</string>
    <string name="ln_label">Last Name</string>
    <string name="studentID_label">"Student ID"</string>
    <string name="studentID_hint">00–0000</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="fn_hint">Juan</string>
    <string name="ln_hint">Dela Cruz</string>

    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="or_Text">or</string>
    <string name="dha_button">Don\'t Have Account? Sign Up</string>
    <string name="hac_button">Have  an Account? Login</string>

    <string name="search_hint">Search…</string>

    <string name="default_project_name">Project Name</string>
    <string name="default_project_desc">This is the preview of your description.</string>
    <string name="default_project_uploader">Uploaded by:</string>

    <string name="full_name_format">First Name + Last Name</string>

    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_about">About CCMS Archive</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="header_title_placeholder">Title</string>
    <string name="title_saved_projects">Bookmark</string>
    <string name="desc_back_button">Go back</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_post">Post</string>

    <string name="title_label">Project Title</string>
    <string name="course_label">Course</string>
    <string name="desc_label">Description</string>
    <string name="tech_used_label">Technologies Used</string>
    <string name="add_media_Label">Add Media</string>
    <string name="additional_deets_label">Additional Details</string>
    <string name="year_label">Year</string>
    <string name="contributors_label">Contributors</string>
    <string name="prof_instructor_label">Professor/Instructor</string>

    <string name="post_button">Post</string>

    <string name="content_desc_add_media">Adding photos or videos.</string>

    <string name="project_title_hint">Project Title</string>
    <string name="desc_hint">Description of the project...</string>
    <string name="course_hint">Start typing course title...</string>
    <string name="tech_used_hint">Start typing technologies used...</string>
    <string name="year_hint">Enter the academic year the project was completed...</string>
    <string name="contributors_hint">Enter the name/s of other contributors...</string>
    <string name="prof_instructor_hint">Enter the name of your Professor or Instructor...</string>

    <string name="profile_details">Profile</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="update_pass">Update Password</string>
    <string name="title_activity_post">PostActivity</string>

    <string name="saved_project_name">Project Name</string>
    <string name="saved_course">Course</string>
    <string name="saved_description">Description</string>
    <string name="saved_uploader">Author</string>

    <string name="name">Name</string>
    <string name="name_of_student">Name of Student</string>
    <string name="student_id">Student ID</string>
    <string name="student_id_of_student">00-0000</string>
    <string name="email_address">Email Address</string>
    <string name="email_add_of_student">student@gmail.com</string>
    <string name="saveEdit">Save</string>

    <string name="studentName">Jasmine Raviz</string>
    <string name="program_year">BSIT | 2nd Year</string>
    <string name="projects">Projects</string>
    <string name="my_posts">My Projects (%1$d)</string>
    <string name="pending_posts">Pending (%1$d)</string>

    <string name="status_label">Status:</string>
    <string name="status">Pending</string>

    <string name="contact_text">Contact Me</string>

    <string name="mission">Mission</string>
    <string name="mission_desc">To provide a centralized digital repository for the College of Computing and Multimedia Studies (CCMS), specifically for IT and IS programs. CCMS Archive aims to eliminate the frustration of academic redundancy by offering a structured platform for browsing past research, project demonstrations, and technical documentation. By making previous student outputs easily accessible, the mission is to foster a culture of innovation, streamline the topic proposal process, and promote meaningful academic collaboration between current students and past project creators.</string>

    <string name="developer">Developer</string>
    <string name="developer_desc">
        <![CDATA[
        This application is a collaborative effort by 2nd-year CCMS students. The original project concept and research idea were proposed by Jasmine C. Raviz. The full development, encompassing both Frontend development and Backend development, was co-executed as a partnership between Ann Dominique C. Estrada and Jasmine C. Raviz. Together, they aim to bridge the gap between past academic achievements and future student innovations.<br><br>

        <b>Jasmine C. Raviz</b><br>
        <a href="https://www.linkedin.com/in/jasmine-raviz-b64a203ab?utm_source=share_via&utm_content=profile&utm_medium=member_android">LinkedIn</a> | <a href="https://github.com/jasmineraviz">GitHub</a> | <a href="https://jasmine-portfolio-dun.vercel.app/">Portfolio</a><br>

        <b>Ann Dominique C. Estrada</b><br>
        <a href="https://www.linkedin.com/in/ann-dominique-estrada/">LinkedIn</a> | <a href="https://github.com/ADEstrada">GitHub</a> | <a href="https://portfolio-ad-estrada.vercel.app/">Portfolio</a><br>

        ]]>
    </string>

    <string name="acknowledgement">Acknowledgement</string>
    <string name="acknowledgement_desc">The developers would like to express their deepest gratitude to Ma\'am Norianne Lamadrid, their dedicated instructor, for her invaluable guidance, patience, and professional expertise throughout this course. Her insights and mentorship played a crucial role in the conceptualization and realization of the CCMS Archive. \n\nThe developers also extend their thanks to the CCMS Faculty for providing an environment that encourages innovation and shared learning. This project would not have been possible without their continuous support.</string>

    <string name="app_ver">App Version</string>
    <string name="app_ver_desc">1</string>

    <string name="messageTitle">Message</string>
    <string name="chat_name">Jasmine Raviz</string>
    <string name="chat_latest">Hello, chat latest</string>
    <string name="date">April 5</string>

    <string name="chat_initial">JR</string>
    <string name="hint_message">Type a message...</string>
    <string name="time">3:59 pm</string>
    <string name="message_sent">This is the message sent</string>
    <string name="sent">Sent</string>

    <string-array name="year_array">
        <item>All Year</item>
        <item>2015-2016</item>
        <item>2016-2017</item>
        <item>2017-2018</item>
        <item>2018-2019</item>
        <item>2019-2020</item>
        <item>2020-2021</item>
        <item>2021-2022</item>
        <item>2022-2023</item>
        <item>2023-2024</item>
        <item>2024-2025</item>
        <item>2025-2026</item>
    </string-array>

    <string-array name="program_array">
        <item>All Program</item>
        <item>BSIT</item>
        <item>BSIS</item>
    </string-array>

    <string-array name="course_array">
        <item>All Course</item>
        <item>IT100 - Introduction to Computing</item>
        <item>IT101 - Computer Programming 1</item>
        <item>IT102 - Computer Programming 2</item>
        <item>IT103 - Data Structures and Algorithms</item>
        <item>IT105 - Application development and Emerging Technologies</item>
        <item>IT106 - Information Management</item>
        <item>IT107 - Introduction to Human-Computer Interaction</item>
        <item>IT109 - Fundamentals of Database Systems</item>
        <item>IT110 - Computer Architecture and Robotics</item>
        <item>IT111 - Integrative Programming Technologies</item>
        <item>IT112 - Mobile Applications</item>
    </string-array>

    <string name="txt_notif">Notifications</string>

    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>