<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:strokeColor="#8DB00020"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/projectNameCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#87231f"
            app:cardCornerRadius="5sp">

            <TextView
                android:id="@+id/projectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/saved_project_name"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/detailsCard"
            android:layout_width="match_parent"
            android:layout_height="129dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:fadeScrollbars="false"
                android:scrollbarStyle="insideOverlay"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/projectDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="6dp"
                    android:text="@string/saved_description"
                    android:textSize="14sp" />

            </ScrollView>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="2dp"
            android:background="#DDDDDD" />

        <TextView
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="6dp"
            android:text="@string/saved_course"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/uploaderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="6dp"
            android:text="@string/saved_uploader"
            android:textSize="14sp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>