<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

       <TextView
        android:id="@+id/tvTimeSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMessageSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="60dp"
        app:cardBackgroundColor="#87231f"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimeSent">

        <TextView
            android:id="@+id/tvMessageSent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:text="@string/message_sent"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvStatusSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sent"
        android:textColor="#9E9E9E"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@id/cardMessageSent"
        app:layout_constraintTop_toBottomOf="@id/cardMessageSent" />

</androidx.constraintlayout.widget.ConstraintLayout>